Fixing some CSS that didn't work on Firefox

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -40,7 +40,7 @@
 .project-image {
   width: 100%;
   max-width: 350px;
-  height: 100%;
+  height: auto;
   margin: 1em;
   border: 2px solid white;
   border-radius: 5px;
