--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,6 @@ body {
   font-family: "Rubik";
   font-weight: 600;
   background-color: #f08080;
-  position: sticky;
   display: block;
   margin: auto;
   color: white;
